feat: Added prettier write and check scripts

--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier:write": "npx prettier --write .",
+    "prettier:check": "npx prettier --check ."
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
